# open-ui-ir

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
demo-backend/: Cargo.toml  Dockerfile
demo-backend/src/: main.rs
demo-ui/: index.html  package.json
demo-ui/src/: main.jsx  styles.css
docs/: architecture.md  auth-design.md  baas-design.md  feature-contract.md  general-framework-design.md  index.html  ir-format.md  package-system.md
examples/: all-features.ui.json  full-crud.ui.json  job-postings.ui.json  product-catalog.ui.json
schemas/: open-ui-ir.v1.schema.json
